fix compile & launch errors